k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ipnfyi
  labels:
    name: ipnfyi
    app: ddns
